Fix alignment of recipes
Add a div container. Also, add a figure and caption to lasagna.

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ li {
     margin-left: 40px;
 }
 
-img {
+figure, img {
     display: block;
     height: auto;
     width: 300px;
